--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -1,1 +1,4 @@
-<p>test works!</p>
+<app-nav-bar></app-nav-bar>
+<app-segmented-control [config]="segments"></app-segmented-control>
+<app-input></app-input>
+<app-rate-chip [rate]="6.9" [placeDecimals]="2"></app-rate-chip>
