--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,14 @@
+*{
+    color: whitesmoke;
+    padding: 0px;
+    box-sizing: border-box;
+    margin: 0px;
+}
 body{
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #141414, #3a3a3a, #1a1a1a);
+    background: linear-gradient(135deg, #0D1117, #0d081a, #0D1117);
+    color: whitesmoke;
     font-family: 'Arial', sans-serif;
     min-height: 100vh;
     width: 100vw; 
