--- a/src/app/pages/test/test.component.html
+++ b/src/app/pages/test/test.component.html
@@ -2,3 +2,4 @@
 <app-segmented-control [config]="segments"></app-segmented-control>
 <app-input></app-input>
 <app-rate-chip [rate]="6.9" [placeDecimals]="2"></app-rate-chip>
+<app-movie-card></app-movie-card>
