creado home y movie card

--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -9,6 +9,7 @@
     gap: 10px; 
     border-radius: 10px;
     background-color: $black-20;
+    margin-top: 6px;
 
     i{
         font-size: 22px;
