--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,6 +1,6 @@
 @if(config){
 <div class="movie-card-container">
-    <div [style.backgorund-image]="'url('+config.img+')'" class="image-container">
+    <div [style.background-image]="'url('+config.img+')'" class="image-container">
     </div>
     <div class="name">{{config.movieName}}</div>
 </div>
