--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -4,17 +4,39 @@
     display: flex;
     flex-direction: column;
     padding: 8px;
-    background: $app-primary;
+    background: $black-20;
     border: 2px solid black;
     border-radius: 15px;
     .image-container{
         width: 100%;
-        height: 430px;
+        height: 490px;
+        border-radius: 10px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
     }
     .name{
         color: $white;
-        margin-bottom: 20px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         font-size: 18px;
         font-weight: bold;
+        text-align: center;
+    }
+}
+@media (max-width: 768px) {
+    .movie-card-container{
+        padding: 2px;
+        margin-bottom: 20px;
+        margin-left: 2px;
+        margin-right: 2px;
+        .image-container{
+            width: 100%;
+            height: 356px;
+        }
+        .name{
+            color: $white;
+            font-size: 14px;
+        }
     }
 }
