--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="home-container">
+    <div class="home-content">
+        <p class="title">
+            {{title}}
+        </p>
+        <div class="search-section">
+            <app-input></app-input>
+        </div>
+    </div>
+</div>
