--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,13 +5,13 @@
     margin: 0px;
 }
 body{
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     background: linear-gradient(135deg, #0D1117, #0d081a, #0D1117);
     color: whitesmoke;
     font-family: 'Arial', sans-serif;
-    min-height: 100vh;
-    width: 100vw; 
+    min-height: 100%;
+    width: 100%; 
     justify-content: center;
     background-attachment: fixed; 
     background-size: cover; 
