--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,15 @@
-<p>home works!</p>
+<div class="home-container">
+    <div class="home-content">
+        <p class="title">
+            {{title}}
+        </p>
+        <div class="search-section">
+            <app-input></app-input>
+        </div>
+        <div class="movie-cards-section">
+            @for (item of [];track $index){
+                <app-movie-card></app-movie-card>
+            }
+        </div>
+    </div>
+</div>
