inicio y conectado a api

--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,6 +1,7 @@
 @if(config){
 <div class="movie-card-container">
     <div [style.background-image]="'url('+config.img+')'" class="image-container">
+        <app-rate-chip [rate]="config.rate" [placeDecimals]="1"></app-rate-chip>
     </div>
     <div class="name">{{config.movieName}}</div>
 </div>
