--- a/src/app/components/rate-chip/rate-chip.component.html
+++ b/src/app/components/rate-chip/rate-chip.component.html
@@ -2,7 +2,7 @@
 @if(rate >0){
     <div class="rate-chip-container">
         <i class="bi bi-star"></i>
-        <span>{{rate}}</span>
+        <span>{{actualNumber }}</span>
     </div>
 }
 
