--- a/src/app/components/rate-chip/rate-chip.component.scss
+++ b/src/app/components/rate-chip/rate-chip.component.scss
@@ -9,6 +9,7 @@
     width: fit-content;
     background-color: $black-20;
     border: 1px solid black;
+    margin: 3px;
     i{
         color: $app-primary;
         font-size: 14.75px;
