--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,13 @@
 .movies-cards-section {
-    display: flex;
-    column-gap: 20px;
+    display: grid;
+    column-gap: 10px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows:auto;
+    width: 90%;
+    margin: auto;
     .movies-cards-container{
-        width: calc(100%/2);
+        width: 100%;
+        margin-top: 10px;
     }
 }
 @media (max-width: 768px) {
@@ -12,6 +17,7 @@
         grid-template-rows: 1fr 1fr;
         .movies-cards-container{
             width: calc(100%);
+            margin-top: 0px;
         }
     }
 }
