--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background: linear-gradient(135deg, #0D1117, #0d081a, #0D1117);
+    background: linear-gradient(135deg, #0D1117, #140b29, #0D1117);
     color: whitesmoke;
     font-family: 'Arial', sans-serif;
     min-height: 100%;
