--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -3,6 +3,7 @@
     <div class="nav-content">
         <div class="logo-section">
         </div>
+        <div class="title"><h2 class="h2"><span class="h2color1">Movie</span><span class="h2color2">Search</span></h2></div>
             @if (navItems && navItems.length >0) {
                 <ul>
                     @for (nav of navItems; track $index) {
