--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -13,7 +13,12 @@
 
     i{
         font-size: 22px;
-        color:$app-secondary;
+        color:rgba($input, 0.9);
+        transition: color 0.3s ease;   
+    }  &:focus-within {
+        i {
+            color: $neon-purple;
+        }
     }
     input {
         flex: 1;
@@ -22,9 +27,8 @@
         outline: none;
         font-size: 18px;
         background: transparent;
-        border-bottom: 2px solid $app-secondary;
-        transition: border-color 0.3s ease;
-    
+        border-bottom: 2px solid rgba($input, 0.3);
+        transition: border-color 0.3s ease;    
         &:focus {
         border-color: $neon-purple;
         }
