--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,16 @@
 <div class="home-container">
     <div class="home-content">
-        <p class="title">
-            {{title}}
-        </p>
+
         <div class="search-section">
             <app-input></app-input>
+        </div>
+        <div class="segmented-control-section">
+            <div class="title-container">
+                <p class="title">
+                    {{title}} <span class="results">{{movieCards.length}} Resultados</span>
+                </p>
+            </div>
+            <app-segmented-control [config]="segments"></app-segmented-control>
         </div>
         <div class="movies-cards-section">
             @for (item of movieCards;track $index){
