--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,6 +1,7 @@
 
 $app-primary: #5aacef;
 $app-secondary: #C5C6C7;
+$input:#89d0dd;
 $black-20: rgba(0, 0, 0, 0.35);
 $white: rgba(255, 255, 255, 0.8);
 $neon-purple:#6a5dff;
