--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,1 +1,6 @@
-<p>detail works!</p>
+<div class="detail-container">
+    <div class="detail-content">
+    <!-- <app-detail-banner [config]=""> </app-detail-banner> -->
+        
+    </div>
+</div>
