--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -8,8 +8,10 @@
     align-items: center;
     gap: 10px; 
     border-radius: 10px;
-    background-color: $black-20;
+    background-color: $black-input;
     margin-top: 6px;
+    border: 1.5px solid $black-20;
+    width: 97%;
 
     i{
         font-size: 22px;
