--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,54 @@
         width: 85%;
         margin: auto;
         .search-section{
+            position: relative;
+            height: 450px;
             margin-top: 40px;
+            overflow: hidden;
+            background-color: $fondo-carousel;
+            border-radius: 7px;
+            border: 2px solid $black-20;
+            .input{
+                position: relative;
+                top: 58%;
+                display: flex;
+                justify-content:center
+            }
+            .imagen-container {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                opacity: 0.40;
+                display: flex;
+                overflow: hidden;
+                .carousel-item {
+                  position: absolute;
+                  width: 100%;
+                  height: 100%;
+                  opacity: 1;
+                  transition: transform 1s cubic-bezier(0.89, -0.01, 0.55, 0.95);
+                  img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                  }
+                }
+              }
+              
+              .carousel-item.active {
+                display: block;
+                transform: translateX(0); 
+              }
+              
+              .carousel-item.previous {
+                display: block;
+                transform: translateX(-100%); 
+              }
+              
+              .carousel-item.next {
+                display: block;
+                transform: translateX(100%);
+              }     
         }
         .title-container{
             text-align: center;            
@@ -74,8 +121,5 @@
         display: block;
         margin-top: 5px;
     }
-    
-}
-.search-section{
     
 }
