--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -28,6 +28,7 @@
         font-weight: bold;
         text-align: center;
         overflow-wrap: anywhere;
+        font-family: $font-title;
     }
 }
 @media (max-width: 768px) {
