--- a/src/app/components/detail-banner/detail-banner.component.html
+++ b/src/app/components/detail-banner/detail-banner.component.html
@@ -2,8 +2,8 @@
 @if(config){
     <div [style.background-image]="'url('+config.img+')'" class="detail-banner-container">
         <div class="title-container">
-            <p><span (click)="open(config.path)">{{config.pageName}}</span></p>
             <h1 class="title">{{config.title}}</h1>
+            <p><span (click)="open(config.path)">{{config.tagline}}</span></p>
         </div>
     </div>
 }
