--- a/src/app/components/detail-banner/detail-banner.component.scss
+++ b/src/app/components/detail-banner/detail-banner.component.scss
@@ -3,19 +3,23 @@
 .detail-banner-container{
     position: relative;
     width: 100%;
-    height: 500px;
+    height: 600px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 5px 4px 15px 4px rgba(106, 93, 255, 0.4);
     .title-container{
         position: absolute;
-        margin-left: 72px;
-        width: 70%;
-        bottom: -20%;
-        background: $black-20;
-        backdrop-filter: blur(24px);
-        border-radius: 30px;
+        width: 50%;
+        bottom: -7%;
+        background: rgba($black-20,0.5);
+        backdrop-filter: blur(8px);
+        border-radius: 20px;
+        text-align: center;
+        border: 2.5px solid rgba($neon-purple,0.2);
         p{
             color: $white;
             font-size: 14px;
@@ -24,8 +28,14 @@
         title{
             font-size: 30px;
             color: white;
+            
         }
-
+        h1{
+            font-family: $font-title;
+        }
+        p{
+            font-family: $font-secundary;
+        }
     }
     
 }
