--- a/src/app/components/segmented-control/segmented-control.component.scss
+++ b/src/app/components/segmented-control/segmented-control.component.scss
@@ -19,6 +19,7 @@
         border-radius: 10px;
         cursor: pointer;
         margin: 0.5px;
+        font-family: $font-segement;
         &:hover{
             background-color:$app-primary;
             color: $white;
