--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -11,7 +11,7 @@
             overflow: hidden;
             background-color: $fondo-carousel;
             border-radius: 7px;
-            border: 2px solid $black-20;
+            box-shadow: 3px 3px 12px 3px rgba(106, 93, 255, 0.30);
             .input{
                 position: relative;
                 top: 58%;
@@ -22,7 +22,7 @@
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                opacity: 0.40;
+                opacity: 0.70;
                 display: flex;
                 overflow: hidden;
                 .carousel-item {
