--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+ @import 'themes/theme.scss';
+
 *{
     color: whitesmoke;
     padding: 0px;
@@ -15,5 +17,5 @@ body{
     justify-content: center;
     background-attachment: fixed; 
     background-size: cover; 
-    font-family: Poppins, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: $font-primary, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
