--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Electrolize&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 $app-primary: #5aacef;
 $app-secondary: #C5C6C7;
@@ -5,5 +10,10 @@ $input:#89d0dd;
 $black-20: rgba(0, 0, 0, 0.35);
 $black-input: rgba(17, 7, 32, 0.75);
 $white: rgba(255, 255, 255, 0.8);
-$neon-purple:#6a5dff;
+$neon-purple:rgb(106, 93, 255);
 $fondo-carousel: #241644;
+$font-title: 'Exo 2', sans-serif;
+$font-primary: 'Bebas Neue', sans-serif;
+$font-secundary: 'Raleway', sans-serif;
+$font-head:'Bungee Inline', sans-serif;
+$font-segement:'Fira Sans', sans-serif;
