--- a/src/app/components/detail-banner/detail-banner.component.scss
+++ b/src/app/components/detail-banner/detail-banner.component.scss
@@ -25,17 +25,35 @@
             font-size: 14px;
             cursor: pointer;
         }
-        title{
-            font-size: 30px;
-            color: white;
-            
-        }
         h1{
+            color: $text-blue;
             font-family: $font-title;
+            text-shadow: 0px 4px 8px rgba(0, 216, 255, 0.70);
+            font-size: 45px;   
         }
-        p{
+        p{            
             font-family: $font-secundary;
         }
     }
     
 }
+@media (max-width: 768px) {
+    .detail-banner-container{
+        height: 300px;
+        border-radius: 20px;
+        .title-container{
+            width: 80%;
+            border-radius: 10px;
+            p{
+                font-size: 11px;
+            }
+            h1{
+                font-size: 32px;   
+            }
+        }
+        
+    }
+
+}
+
+
