--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,8 +1,9 @@
-@if(config){
-<div (click) ="config.onClick ? config.onClick(): null" class="movie-card-container">
-    <div [style.background-image]="'url('+config.img+')'" class="image-container">
-        <app-rate-chip [rate]="config.rate" [placeDecimals]="1"></app-rate-chip>
-    </div>
-    <div class="name">{{config.movieName}}</div>
-</div>
+@if(config){ 
+    <div (click)="config.onClick ? config.onClick() : null" class="movie-card-container">
+        <div [style.background-image]="'url('+config.img+')'" class="image-container">
+          <app-rate-chip [rate]="config.rate" [placeDecimals]="1"></app-rate-chip>
+          <button class="button" title="Añadir a lista" type="button"><i class="bi bi-plus-square-fill" (click)="onAddClick($event)"></i></button>
+        </div>
+        <div class="name">{{config.movieName}}</div>
+      </div>
 }
