--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -13,12 +13,22 @@
         transition: background 0.4s ease;
     }
     .image-container{
-        width: 100%;
-        height: 533px;
-        border-radius: 10px;
-        background-size: cover;
-        background-position: center;
+        display: flex; 
+        justify-content: space-between; 
+        width: 100%; 
+        height: 533px; 
+        border-radius: 10px; 
+        background-size: cover; 
+        background-position: center; 
         background-repeat: no-repeat;
+        i{ 
+            color: rgba($app-primary, 0.75); 
+            font-size: 33px; 
+            padding: 0px 7px;
+        }& :hover{ 
+            color: rgba($app-primary, 1); 
+            font-size: 35px; 
+        } 
     }
     .name{
         color: $white;
@@ -46,4 +56,11 @@
             font-size: 14px;
         }
     }
+}
+.button{
+    all: unset;
+    display: flex;
+    width: auto;
+    height:50px;
+
 }
