--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -1,3 +1,5 @@
+@import '../../../themes/theme.scss';
+
 .detail-container {
     display: flex;
     flex-direction: column;
@@ -5,6 +7,7 @@
     width: 100%;
     height: 100%;
     margin-top: 30px;
+    margin-bottom: 40px;
 
     .detail-content {
         display: block;
@@ -15,104 +18,230 @@
         .detail-section {
             display: flex;
             flex-direction: row;
-            align-items: flex-start; /* Alineación al inicio para mejor distribución */
+            align-items: flex-start; 
             width: 100%;
             margin-top: 20px;
-            background: linear-gradient(145deg, rgba(0, 0, 0, 0.9), rgba(20, 20, 20, 0.9)); /* Gradiente oscuro */
-            border-radius: 20px; /* Bordes más redondeados */
-            padding: 30px; /* Más espacio interno */
-            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6); /* Sombra más pronunciada */
-            border: 1px solid rgba(255, 255, 255, 0.1); /* Borde sutil */
-
+            background: linear-gradient(145deg, rgba(0, 0, 0, 0.9), rgba(20, 20, 20, 0.9)); 
+            border-radius: 20px;
+            padding: 30px; 
+            box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.6); 
+            border: 1px solid rgba(255, 255, 255, 0.1); 
             .image-section {
-                width: 300px; /* Más grande */
-                height: 450px; /* Más alto */
+                display: flex;
+                justify-content: space-between;
+                width: 300px; 
+                height: 450px; 
                 background-size: cover;
                 background-position: center;
                 border-radius: 15px;
-                margin-right: 30px; /* Espacio entre la imagen y la información */
-                border: 3px solid rgba(255, 255, 255, 0.2); /* Borde más grueso */
-                box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5); /* Sombra para la imagen */
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-                &:hover {
-                    transform: scale(1.05); /* Efecto de zoom al pasar el mouse */
-                    box-shadow: 0px 8px 25px rgba(0, 216, 255, 0.6); /* Sombra con color al hover */
+                margin-right: 30px; 
+                border: 3px solid rgba(255, 255, 255, 0.2); 
+                box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5); 
+                box-shadow: 0px 8px 25px rgba(0, 216, 255, 0.6);
+                .rate{
+                    padding: 10px;
                 }
+                i{ 
+                    margin-top: 10px;
+                    margin-right: 8px;
+                    color: rgba($app-primary, 0.75); 
+                    font-size: 33px; 
+                    padding: 0px 7px;
+                    cursor: pointer;
+                }& :hover{ 
+                    color: rgba($app-primary, 1); 
+                    font-size: 35px; 
+                }     
             }
-
             .info-section {
-                width: 70%; /* Más espacio para la información */
+                width: 70%; 
                 display: flex;
                 flex-direction: column;
-                align-items: flex-start; /* Alineación a la izquierda */
+                align-items: flex-start;
                 color: #fff;
                 font-family: 'Arial', sans-serif;
+                
+                .logo-productor{
+                    background-color: white;
+                    width: 100px; 
+                    height: 100px; 
+                    background-size: contain;
+                    background-position: center;
+                    border-radius: 15px;
+                }
 
                 .title {
-                    font-size: 32px; /* Más grande */
-                    font-weight: bold;
-                    margin-bottom: 20px;
-                    color: #00d8ff;
-                    text-shadow: 0px 4px 10px rgba(0, 216, 255, 0.8); /* Brillo más intenso */
-                    letter-spacing: 1px; /* Espaciado entre letras */
+                    font-family: $font-secundary;
+                    font-size: 24px;
+                    margin-top: 40px;
+                    margin-bottom: 40px;
+                    color: $white; 
                 }
-
-                .overview {
-                    font-size: 18px; /* Más grande */
-                    line-height: 1.8; /* Más espacio entre líneas */
-                    text-align: left; /* Alineación a la izquierda */
-                    margin-bottom: 30px;
-                    color: #ddd;
-                    background: rgba(255, 255, 255, 0.05); /* Fondo sutil para el texto */
-                    padding: 20px;
-                    border-radius: 10px;
-                    border-left: 4px solid #00d8ff; /* Borde lateral destacado */
+                .container-overview{
+                    .description-title{
+                        position: relative;
+                        top: 14px;
+                        margin: auto;                     
+                        width: 150px;
+                        background: rgba(255, 255, 255, 0.05);
+                        padding: 6px;
+                        text-align: center;
+                        border-radius: 5px;
+                        border-left: 2px solid #00d8ff;
+                        border-right: 2px solid #00d8ff;
+                        font-family: $font-segement;
+                        font-size: 19px;
+                        font-weight: bold;
+                    }
                 }
-
+                    .overview {
+                        font-size: 18px;
+                        font-family: $font-secundary;
+                        line-height: 1.8; 
+                        text-align: left; 
+                        margin-bottom: 30px;
+                        background: rgba(255, 255, 255, 0.05); 
+                        padding: 30px 22px;
+                        border-radius: 10px;
+                        border-left: 4px solid #00d8ff;
+                        border-right: 4px solid #00d8ff;
+                        p{
+                            all: unset;
+                        }
+                    
+                }
                 .info-box {
                     display: grid;
-                    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); /* Cuadrícula flexible */
-                    gap: 25px; /* Más espacio entre cajas */
+                    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+                    gap: 25px; 
                     width: 100%;
 
                     .box {
-                        background: rgba(255, 255, 255, 0.1);
-                        border-radius: 15px; /* Bordes más redondeados */
-                        padding: 25px; /* Más espacio interno */
-                        text-align: left; /* Alineación a la izquierda */
-                        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.4); /* Sombra más pronunciada */
-                        transition: transform 0.3s ease, box-shadow 0.3s ease;
-                        cursor: pointer;
-
-                        &:hover {
-                            transform: translateY(-10px); /* Efecto de levitación */
-                            box-shadow: 0px 8px 20px rgba(0, 216, 255, 0.6); /* Sombra con color al hover */
-                        }
+                        background: rgba(255, 255, 255, 0.05);
+                        border-radius: 12px; 
+                        padding: 20px;
+                        text-align: left; 
 
                         .box-title {
-                            font-size: 20px; /* Más grande */
-                            font-weight: bold;
-                            margin-bottom: 15px;
-                            color: #ffd700;
+                            font-family: $font-primary;
+                            font-size: 18px; 
+                            margin-bottom: 10px;
+                            color: rgb(255, 217, 0, 0.85);
                             display: flex;
                             align-items: center;
-                            gap: 10px; /* Espacio entre icono y texto */
+                            gap: 10px; 
 
                             .box-icon {
                                 font-size: 24px;
-                                color: #00d8ff; /* Color destacado */
+                                color: #00d8ff; 
                             }
                         }
 
                         .box-description {
-                            font-size: 16px; /* Más grande */
+                            font-family: $font-secundary;
+                            font-size: 17px; 
                             color: #ccc;
-                            line-height: 1.6; /* Más espacio entre líneas */
+                            line-height: 1.6;
                         }
                     }
                 }
             }
         }
     }
+}
+
+
+
+.button{
+    all: unset;
+    display: flex;
+    width: auto;
+    height:50px;
+
+}
+
+
+@media (max-width: 768px) {
+    .detail-container {
+
+        .detail-content {
+            width: 95%;
+            .detail-section {
+                display: flex;
+                flex-direction: column-reverse;
+                align-items: center; 
+                margin-top: 45px;
+                border-radius: 13px;
+                padding: 14px; 
+                .image-section {
+                    width: 75%; 
+                    height: 350px; 
+                    margin: auto;
+                    margin-top: 35px;
+                    margin-bottom: 15px;
+                    .rate{
+                        padding: 10px;
+                    }
+                    i{ 
+                        margin-top: 10px;
+                        margin-right: 8px;
+                        color: rgba($app-primary, 0.75); 
+                        font-size: 33px; 
+                        padding: 0px 7px;
+                        cursor: pointer;
+                    }& :hover{ 
+                        color: rgba($app-primary, 1); 
+                        font-size: 35px; 
+                    }     
+                }
+                .info-section {
+                    width: 95%; 
+
+                    .logo-productor{
+
+                    }
+    
+                    .title {
+                        margin: auto;
+                        font-size: 20px;
+                        margin-top: 20px;
+                        margin-bottom: 20px;
+                    }
+                    .container-overview{
+                        .description-title{
+                            font-size: 17px;
+                        }
+                    }
+                        .overview {
+                            font-size: 16px;
+                            p{
+                                all: unset;
+                            }
+                        
+                    }
+                    .info-box {   
+                        .box {
+                            padding: 16px;
+    
+                            .box-title {
+                                font-size: 17px; 
+                                margin-bottom: 9px;
+
+                                .box-icon {
+                                    font-size: 22px;
+                                    color: #00d8ff; 
+                                }
+                            }
+    
+                            .box-description {
+                                font-size: 16px; 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
 }
