añadido info series

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -2,4 +2,5 @@
 <div class="input-container">
     <i class="bi bi-search"></i>
     <input type="text" placeholder="¿cómo te sientes hoy? ¡Yo te recomiendo!">
+    <button><span>Recomendar</span><i class="bi bi-box-arrow-in-left"></i></button>
 </div>
