--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -18,7 +18,8 @@
         .detail-section {
             display: flex;
             flex-direction: row;
-            align-items: flex-start; 
+            justify-content: space-between;
+            align-items: center;
             width: 100%;
             margin-top: 20px;
             background: linear-gradient(145deg, rgba(0, 0, 0, 0.9), rgba(20, 20, 20, 0.9)); 
@@ -75,9 +76,11 @@
                     font-size: 24px;
                     margin-top: 40px;
                     margin-bottom: 40px;
-                    color: $white; 
+                    color: $white;
+                    border-bottom: 2.5px solid #00d8ff;
                 }
                 .container-overview{
+                    margin: auto;
                     .description-title{
                         position: relative;
                         top: 14px;
