--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -39,7 +39,7 @@
                         <h4>Suscripción:</h4>
                         <div class="provider-logos">
                             @for (provider of config.watchProviders.flatrate; track $index){
-                                <a class="provider-link" [href]="'https://www.' + provider.provider_name.split(' ')[0] +'.com'" target="_blank">
+                                <a class="provider-link" [href]="'https://www.' + formatProviderName(provider.provider_name) +'.com'" target="_blank">
                                     <img class="provider-logo" [src]="'https://image.tmdb.org/t/p/w500/' + provider.logo_path" [alt]="provider.provider_name" />
                                 </a>
                             }
@@ -51,7 +51,7 @@
                         <h4>Alquiler:</h4>
                         <div class="provider-logos">
                             @for (provider of config.watchProviders.rent; track $index){
-                                <a class="provider-link" [href]="'https://www.' + provider.provider_name.split(' ')[0] +'.com'" target="_blank">
+                                <a class="provider-link" [href]="'https://www.' + formatProviderName(provider.provider_name) +'.com'" target="_blank">
                                     <img class="provider-logo" [src]="'https://image.tmdb.org/t/p/w500/' + provider.logo_path" [alt]="provider.provider_name" />
                                 </a>
                             }
