--- a/src/app/components/auth-modal/auth-modal.component.scss
+++ b/src/app/components/auth-modal/auth-modal.component.scss
@@ -55,4 +55,9 @@
     cursor: pointer;
     margin-top: 10px;
   }
-  
+  .error-message {
+    color: red;
+    margin-top: 10px;
+    font-size: 14px;
+    text-align: center;
+  }
