--- a/src/app/components/auth-modal/auth-modal.component.html
+++ b/src/app/components/auth-modal/auth-modal.component.html
@@ -1,18 +1,23 @@
 <div class="modal-backdrop" *ngIf="showModal" (click)="close()"></div>
 
 <div class="modal-container" *ngIf="showModal" (click)="$event.stopPropagation()">
-
   <div class="modal-content">
     <button class="close-btn" (click)="close()">✖</button>
     
     <h2>{{ isLoginMode ? 'Iniciar Sesión' : 'Registro' }}</h2>
 
     <form (submit)="onSubmit()">
+      <!-- Campo de nombre de usuario (solo en modo registro) -->
+      <input *ngIf="!isLoginMode" type="text" [(ngModel)]="user.username" name="username" placeholder="Nombre de usuario" required />
+      
       <input type="email" [(ngModel)]="user.email" name="email" placeholder="Correo" required />
       <input type="password" [(ngModel)]="user.password" name="password" placeholder="Contraseña" required />
       
       <button type="submit">{{ isLoginMode ? 'Entrar' : 'Registrarse' }}</button>
     </form>
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
 
     <p (click)="switchMode()" class="switch-text">
       {{ isLoginMode ? '¿No tienes cuenta? Regístrate' : '¿Ya tienes cuenta? Inicia sesión' }}
