--- a/src/app/components/auth-modal/auth-modal.component.scss
+++ b/src/app/components/auth-modal/auth-modal.component.scss
@@ -1,9 +1,12 @@
+@import '../../../themes/theme.scss';
 .modal-backdrop {
     all:unset;
     position: fixed;
     top: 0; left: 0; width: 100%; height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex; align-items: center; justify-content: center;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+    display: flex; align-items: center; 
+    justify-content: center;
   }
   
   .modal-container {
@@ -13,23 +16,36 @@
     background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: $shadow-blue;
     width: 300px;
     pointer-events: auto;
+    z-index: 1;
   }
   
   .modal-content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    h2{
+      color: $black-input;
+    }
+    i{
+      color: #007BFF;
+      &:hover{
+        color: black;
+        }
+    }
   }
   
   .close-btn {
-    align-self: flex-end;
+    display: flex;
+    flex-direction: row-reverse;
     border: none;
     background: transparent;
-    font-size: 20px;
+    font-size: 18px;
+    width: 100%;
     cursor: pointer;
+    padding: 2px;
   }
   
   input {
@@ -38,26 +54,51 @@
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    color: black;
   }
   
   button {
     width: 100%;
     padding: 10px;
     background: #007BFF;
-    color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
   }
   
   .switch-text {
-    color: blue;
+    color:  #007BFF;
     cursor: pointer;
     margin-top: 10px;
   }
   .error-message {
     color: red;
-    margin-top: 10px;
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
   }
+  .password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    button{
+      width: 15%;
+    }
+  }
+  
+  .toggle-password-btn {
+    position: absolute;
+    right: 10px;
+    background: none;
+    cursor: pointer;
+    padding: 0;
+    color: #666; 
+  }
+  
+  .toggle-password-btn i {
+    font-size: 1.1em;
+  }
+  form{
+    width: 100%;
+  }
+  
