--- a/src/app/components/auth-modal/auth-modal.component.scss
+++ b/src/app/components/auth-modal/auth-modal.component.scss
@@ -28,6 +28,7 @@
     align-items: center;
     h2{
       color: $black-input;
+      border-bottom: 2.5px solid #00d8ff;
     }
     i{
       color: #007BFF;
