--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,5 +27,10 @@
             [showModal]="showLoginModal"
             (closeModal)="showLoginModal = false">
         </app-auth-modal>
+        <app-add-list
+            [showModal]="showListModal"
+            [movieId]="selectedMovieAndTvId"
+            (showModalChange)="showListModal = $event">
+        </app-add-list>
     </div>
 </div>
