--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -64,4 +64,9 @@
         }
     </div>      
     </div>
+    <app-add-list
+        [showModal]="showListModal"
+        [movieId]="selectedMovieAndTvId"
+        (showModalChange)="showListModal = $event">
+    </app-add-list>
 </div>
