--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,25 @@ body{
     background-size: cover; 
     font-family: $font-primary, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+html {
+    scrollbar-width: thin; 
+    scrollbar-color: #555 #2c2c2c; 
+  }
+::-webkit-scrollbar {
+  width: 12px; 
+  height: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2c2c2c;
+  border-radius: 10px; 
+}
+::-webkit-scrollbar-thumb {
+  background: #555; 
+  border-radius: 10px;
+  border: 3px solid #2c2c2c; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #777; 
+}
