--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -17,5 +17,6 @@ $font-primary: 'Bebas Neue', sans-serif;
 $font-secundary: 'Raleway', sans-serif;
 $font-head:'Bungee Inline', sans-serif;
 $font-segement:'Fira Sans', sans-serif;
+$fotn-console:'consolas';
 $text-blue: #00d8ff;
 $shadow-blue: 0px 8px 25px rgba(0, 216, 255, 0.6);
