--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-nav-bar></app-nav-bar>
-<router-outlet />
+<div class="layout">
+    <app-nav-bar></app-nav-bar>
+    <main class="content">
+        <router-outlet></router-outlet>
+    </main>
+    <app-footer></app-footer>
+</div>
