--- a/src/app/components/info-page/info-page.component.scss
+++ b/src/app/components/info-page/info-page.component.scss
@@ -15,7 +15,7 @@
         color: $white; 
         border-bottom: 2.5px solid rgba(0, 216, 255,0.95); 
         padding-bottom: 10px; 
-        margin-bottom: 25px; 
+        margin-bottom: 25apx; 
         text-align: center;  
     }      
 
@@ -23,6 +23,8 @@
         display: flex; 
         flex-direction: column; 
         gap: 25px;  
+        margin-top: 25px;
+        margin-left: 70px;
 
         .informacion-category { 
             h4 { 
@@ -73,6 +75,9 @@
     .informacion-section { 
         padding: 15px; 
         margin-top: 30px; 
+        h3{
+            font-size: 26px; 
+        }
 
         .informacion-title { 
             font-size: 19px; 
@@ -80,6 +85,7 @@
 
         .informacion-list { 
             gap: 18px; 
+            margin-left: 0px;
 
             .informacion-category { 
                 h4 { 
