--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,6 @@
 <div class="container-info">
     <app-info-page class="info"></app-info-page>
+    <app-contact-social class="social"></app-contact-social>
 </div>
+
 
