--- a/src/app/components/rate-chip/rate-chip.component.scss
+++ b/src/app/components/rate-chip/rate-chip.component.scss
@@ -7,7 +7,7 @@
     padding: 5px 7px;
     border-radius: 8px;
     width: fit-content;
-    background-color: $black-20;
+    background-color: rgba(17, 7, 32, 0.70);
     border: 1px solid black;
     margin: 3px;
     i{
@@ -18,6 +18,7 @@
         font-size: 16px;
         font-weight: bold;
         color: $app-primary;
+        margin-right: 4px;
     }
 
 }
