--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -1,9 +1,24 @@
-
-<div class="container">
+<div class="container-list">
     <ul class="name-list-container">
-        <li *ngFor="let list of userLists">
-            <h2>{{ list.name }}</h2>
-            <button id="delete" (click)="deleteList(list.name)"><i class="bi bi-trash3-fill"></i></button>
-          </li>
+        <div class="input-container">
+            <input [(ngModel)]="newListName" placeholder="Nombre de la lista nueva" />
+            <button class="delete-list" (click)="createList()">Crear</button>
+        </div>
+        <li *ngFor="let list of userLists; let i = index">
+            <div class="container-name">
+                <h2>{{ list.name }}</h2>
+                <button id="delete" (click)="deleteList(list.name)"><i class="bi bi-trash3-fill"></i></button>    
+            </div>
+            <div class="movies-cards-container">
+                <button *ngIf="list.movies.length > 1" class="scroll-button left" (click)="scrollLeft(cardWrapper)">‹</button>
+                <div class="cards-wrapper" #cardWrapper>
+                    <div *ngFor="let movieCard of list.movieCards">
+                        <button><i class="bi bi-trash3-fill"></i></button>
+                        <app-movie-card class="card" [config]="movieCard"></app-movie-card>
+                    </div>
+                </div>
+                <button *ngIf="list.movies.length > 1" class="scroll-button right" (click)="scrollRight(cardWrapper)">›</button>
+            </div>
+        </li>
     </ul>
 </div>
